new font & updated text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="rbottom">
         <img src="assets/img/saturn-black.png" alt="">
-        <p>© 2025 Saturn</p>
+        <p>© 2022 - 2025 Saturn</p>
     </div>
 </body>
 </html>
