--- a/about.html
+++ b/about.html
@@ -8,6 +8,19 @@
     <title>Saturn</title>
 </head>
 <body>
+
+    <div class="about-container">
+        <h1>Saturn</h1>
+        <p>Three developers, one team since 2022.</p>
+        <p>Saturn is where we showcase the projects we’ve created.</p>
+        <br>
+        <div class="members">
+                <a href="https://example.com/wildy" target="_blank">WILDY</a>
+                <a href="https://example.com/aze" target="_blank">AZE</a>
+                <a href="https://example.com/fulgur" target="_blank">FULGUR</a>
+        </div>
+    </div>
+
     <div class="navbar">
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
