--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
         <p>Saturn is where we showcase the projects we’ve created.</p>
         <br>
         <div class="members">
-                <a href="https://example.com/wildy" target="_blank">WILDY</a>
-                <a href="https://example.com/aze" target="_blank">AZE</a>
-                <a href="https://example.com/fulgur" target="_blank">FULGUR</a>
+                <a href="https://wildy.saturn.gay" target="_blank">WILDY</a>
+                <a href="https://aze.saturn.gay" target="_blank">AZE</a>
+                <a href="https://fulgur.saturn.gay" target="_blank">FULGUR</a>
         </div>
     </div>
 
