--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Saturn</title>
 </head>
 <body>
+    <pre class="ascii-art">
+                                         _.oo.
+                     _.u[[/;:,.         .odMMMMMM'
+                  .o888UU[[[/;:-.  .o@P^    MMM^
+                 oN88888UU[[[/;::-.        dP^
+                dNMMNN888UU[[[/;:--.   .o@P^
+               ,MMMMMMN888UU[[/;::-. o@^
+               NNMMMNN888UU[[[/~.o@P^
+               888888888UU[[[/o@^-..
+              oI8888UU[[[/o@P^:--..
+           .@^  YUU[[[/o@^;::---..
+         oMP     ^/o@P^;:::---..
+      .dMMM    .o@^ ^;::---...
+     dMMMMMMM@^`       `^^^^
+    YMMMUP^
+     ^^
+    </pre>
+    
     <div class="navbar">
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
