--- a/about.html
+++ b/about.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="shortcut icon" href="assets/img/saturn-white.png" type="image/png">
     <title>Saturn</title>
 </head>
 <body>
