--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="shortcut icon" href="assets/img/saturn-white.png" type="image/png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Saturn</title>
 </head>
@@ -15,7 +15,6 @@
         <a href="https://host.saturn.gay/">HOSTING</a>
     </div>
     <div class="rbottom">
-        <img src="assets/img/saturn-black.png" alt="">
         <p>© 2022 - 2025 SATURN</p>
         <p>ALL RIGHTS RESERVED</p>
     </div>
