--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="shortcut icon" href="assets/img/saturn-white.png" type="image/png">
+    <link rel="shortcut icon" href="assets/img/saturn-white.png">
     <title>Saturn</title>
 </head>
 <body>
