--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/img/saturn-white.png" type="image/png">
+    <link rel="shortcut icon" href="assets/img/saturn-white.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Saturn</title>
 </head>
