--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="og:site_name" content="Saturn" />
+    <meta name="og:type" content="object" />
+    <meta name="og:image" content="https://saturn.gay/assets/img/saturn-white.png" />
+    <meta name="og:title" content="Saturn" />
+    <meta name="og:url" content="https://saturn.gay/" />
+    <meta name="theme-color" content="#FFF" />
+    <meta name="og:description" content="Three developers, one team since 2022." />
+
     <link rel="shortcut icon" href="assets/img/saturn-white.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Saturn</title>
