--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/saturn-white.png">
     <link rel="stylesheet" href="assets/css/styles.css">
+
+    <meta name="og:site_name" content="Saturn" />
+    <meta name="og:type" content="object" />
+    <meta name="og:image" content="https://saturn.gay/assets/img/saturn-white.png" />
+    <meta name="og:title" content="Saturn" />
+    <meta name="og:url" content="https://saturn.gay/" />
+    <meta name="theme-color" content="#FFF" />
+    <meta name="og:description" content="Three developers, one team since 2022." />
+    
     <title>Saturn</title>
 </head>
 <body>
