--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
       <meta name="og:image" content="https://saturn.gay/assets/img/saturn-white.png" />
       <meta name="og:title" content="Saturn" />
       <meta name="og:url" content="https://saturn.gay/" />
-      <meta name="theme-color" content="#FFF" />
+      <meta name="theme-color" content="#FFFFFF" />
       <meta name="og:description" content="Three developers, one team since 2022." />
 
     <link rel="stylesheet" href="assets/css/styles.css">
