--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
         <a href="projects.html">PROJECTS</a>
         <a href="https://host.saturn.gay/">HOSTING</a>
     </div>
+
     <div class="rbottom">
+        <div class="theme-switch">
+            <span id="themeToggleText">LIGHT</span>
+        </div>
         <p>© 2022 - 2025 SATURN</p>
         <p>ALL RIGHTS RESERVED</p>
     </div>
+    <script src="assets/js/darkmode.js"></script>
 </body>
 </html>
