--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="rbottom">
         <div class="theme-switch">
-            <span id="themeToggleText">LIGHT</span>
+            <span id="themeToggleText">DARK</span>
         </div>
         <p>© 2022 - 2025 SATURN</p>
         <p>ALL RIGHTS RESERVED</p>
