theme to localstorage + toggles on all pages

--- a/about.html
+++ b/about.html
@@ -37,8 +37,12 @@
         <a href="https://host.saturn.gay/">HOSTING</a>
     </div>
     <div class="rbottom">
+        <div class="theme-switch">
+            <span id="themeToggleText">DARK</span>
+        </div>
         <p>© 2022 - 2025 SATURN</p>
         <p>ALL RIGHTS RESERVED</p>
     </div>
+    <script src="assets/js/darkmode.js"></script>
 </body>
 </html>
