--- a/index.html
+++ b/index.html
@@ -43,12 +43,19 @@
     </div>
 
     <div class="rbottom">
+        <div class="switches">
+        <div class="font-switch">
+            <span id="fontToggleText">SERIF</span>
+        </div>
+        <p>|</p>
         <div class="theme-switch">
             <span id="themeToggleText">DARK</span>
+        </div>
         </div>
         <p>© 2022 - 2025 SATURN</p>
         <p>ALL RIGHTS RESERVED</p>
     </div>
     <script src="assets/js/darkmode.js"></script>
+    <script src="assets/js/font.js"></script>
 </body>
 </html>
